--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>  
-    <img src="https://miro.medium.com/v2/resize:fit:1200/1*chhKo9KEel7n7hi0O_cEPA.png" height="500" width="900">
-    <ul>
-        <li><a href = "recipes/ginger-cookies.html">Ginger Cookies</a></li>  
-        <li><a href = "recipes/chicken-tacos.html">Ranch Chicken Tacos</a></li>  
-        <li><a href = "recipes/asian-lettuce-wrap.html">Asian Lettuce Wraps</a></li>  
-    </ul>
+    <h1 class="header">Odin Recipes</h1>  
+    <div class="imgs">
+        <img src="https://miro.medium.com/v2/resize:fit:1200/1*chhKo9KEel7n7hi0O_cEPA.png" height="500" width="900">
+    </div>
+    <div class="divli">
+        <ul class="list">
+            <li><a href = "recipes/ginger-cookies.html">Ginger Cookies</a></li> 
+            <br> 
+            <li><a href = "recipes/chicken-tacos.html">Ranch Chicken Tacos</a></li>  
+            <br> 
+            <li><a href = "recipes/asian-lettuce-wrap.html">Asian Lettuce Wraps</a></li>  
+            <br> 
+        </ul>
+    </div>
 </body>
 
 </html>
