--- a/recipes/ginger-cookies.html
+++ b/recipes/ginger-cookies.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
     <title>Ginger Cookies</title>
 </head>
 
 <body>
-    <h1>Ginger Cookies</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F08%2F15%2F17165_Big-Soft-Ginger-Cookies_ZAKIAH_4574068_original-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-     height="400" width="400">
-    <h2>Description:</h2>
-    <p>Big, soft, gingerbread cookies made with molasses, ginger, and other spices are a holiday favorite. This gingerbread cookie recipe for ginger cookies rolled in sugar is my oldest son's favorite. Store cooled cookies in an airtight container and they will stay soft for days.</p>
-    <h2>Ingredients:</h2>
-    <ul>
-        <li>Sugar</li>
-        <li>Flour</li>
-        <li>Spices</li>
-        <li>Baking soda</li>
-        <li>Salt</li>
-        <li>Butter</li>
-        <li>Egg</li>
-        <li>Molasses</li>
-    </ul>
-
-    <h2>Steps:</h2>
-    <ol>
+    <h1 class="header">Ginger Cookies</h1>
+    
+    <div class="imgs">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F08%2F15%2F17165_Big-Soft-Ginger-Cookies_ZAKIAH_4574068_original-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+        height="400" width="400">
+    </div>
+    <h2 class="header">Description:</h2>
+    <p class="col">Big, soft, gingerbread cookies made with molasses, ginger, and other spices are a holiday favorite. This gingerbread cookie recipe for ginger cookies rolled in sugar is my oldest son's favorite. Store cooled cookies in an airtight container and they will stay soft for days.</p>
+    <h2 class="header">Ingredients:</h2>
+    <div class="divli">
+        <ul class="list">
+            <li>Sugar</li>
+            <li>Flour</li>
+            <li>Spices</li>
+            <li>Baking soda</li>
+            <li>Salt</li>
+            <li>Butter</li>
+            <li>Egg</li>
+            <li>Molasses</li>
+        </ul>
+    </div>
+    <h2 class="header">Steps:</h2>
+    <ol class="list">
         <li>Sift the dry ingredients together.</li>
         <li>Cream the butter and sugar together. Beat in the egg, then add the water and molasses.</li>
         <li>Stir the dry ingredients into the wet ingredients until well-combined.</li>
